# lit

./: .dockerignore  .gitignore  .travis.yml  Dockerfile  MANIFEST.in  README.md  RELEASE.md  app.yml  build_package.sh  environment.yml  index.html  package-lock.json  pyproject.toml  requirements.txt  requirements_core.txt  requirements_examples.txt  requirements_examples_common.txt  requirements_examples_descai.txt  requirements_examples_genai.txt  requirements_examples_generative_ai.txt  requirements_test.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
bert-tiny/mnli/: config.json  train.history.json
bert-tiny/sst2/: config.json  tokenizer_config.json  train.history.json
bert-tiny/stsb/: config.json  train.history.json
docs/: client.md  development.md  faq.md  index.html  index.md  python_api.md  user_guide.md
docs/demos/: coref.html  glue.html  images.html  index.html  is_eval.html  lm.html  penguins.html  t5.html
docs/docs/: index.html
docs/documentation/: api.html  components.html  demos.html  docker.html  faq.html  frontend_development.html  genindex.html  getting_started.html  glossary.html  index.html  objects.inv  search.html  searchindex.js  ui_guide.html
docs/faqs/: index.html
docs/setup/: index.html
docs/tutorials/: index.html
documentation/: api.md  client.md  components.md  demos.md  development.md  docker.md  faq.md  frontend_development.md  getting_started.md  glossary.md  index.md  python_api.md  ui_guide.md  user_guide.md
documentation/includes/: demos.css  global_styles.css
examples/penguin/: requirements.txt
examples/prompt_debugging/: requirements.txt
examples/vertexai/: requirements.txt
lit_nlp/: .eslintrc.json  .gitignore  .pylintrc  Dockerfile  RELEASE.md  app.py  dev_server.py  notebook.py  package.json  server_config.py  server_flags.py  server_flags_test.py  tsconfig.json
lit_nlp/api/: components.py  dataset.py  dataset_test.py  dtypes.py  layout.py  model.py  model_test.py  types.py  types_test.py
lit_nlp/client/: app.ts  declaration.d.ts  layout.ts  main.ts  package-lock.json  package.json  tsconfig.json
lit_nlp/components/: ablation_flip.py  ablation_flip_int_test.py  ablation_flip_test.py  annotators.py  backtranslator.py  cf_utils.py  cf_utils_test.py  classification_results.py  classification_results_test.py  core.py  curves.py  curves_test.py  gradient_maps.py  gradient_maps_test.py  hotflip.py  hotflip_int_test.py  hotflip_test.py  image_gradient_maps.py  index.py  (+43 more)
pip_package/: README.md  build_pip_package.sh  setup.py
website/: .eleventy.deploy.js  .eleventy.js  README.md  deploy.sh  local.sh  package-lock.json  package.json  zip.sh
(+477 files in other folders)
